HVAC Backup 2/objects/Quote_Line_Migration__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_id_value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset id value</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPQ Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <label>Cases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_type__c</fullName>
        <formula>Service_Contract__r.Contract_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downloading_value__c</fullName>
        <label>Downloading Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_formula__c</fullName>
        <formula>Asset_id_value__r.Product2.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <label>QuoteId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_And_Asset_Combo__c</fullName>
        <label>Quote And Asset Combo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <label>Quote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Quote Line Migration</relationshipLabel>
        <relationshipName>Quote_Line_Migration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_No_Backend_DU__c</fullName>
        <externalId>true</externalId>
        <label>Unique No Backend DU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote Line Migration</label>
    <nameField>
        <displayFormat>qlm-{0000}</displayFormat>
        <label>Quote Line Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Migration</pluralLabel>
    <recordTypes>
        <fullName>Contract_Line_Item</fullName>
        <active>true</active>
        <label>Contract Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Line_Item_CPQ</fullName>
        <active>true</active>
        <label>Quote Line Item(CPQ)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Line_Item_Sales</fullName>
        <active>true</active>
        <label>Quote Line Item(Sales)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>